{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 679,
  "lineage": "603c4258-a869-09a7-01c2-c2bb7888b2b7",
  "resources": [
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "consul_lb",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/app/terraform-545j4bommr8kop-consul/4e7e710929c25546",
            "arn_suffix": "app/terraform-545j4bommr8kop-consul/4e7e710929c25546",
            "dns_name": "terraform-545j4bommr8kop-consul-171030207.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/app/terraform-545j4bommr8kop-consul/4e7e710929c25546",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-545j4bommr8kop-consul",
            "security_groups": [
              "sg-05926d81beb80780d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04865bd86497276d6"
              },
              {
                "subnet_id": "subnet-0b65d5b4383da95c1"
              },
              {
                "subnet_id": "subnet-0e3ffc0b3a7408684"
              }
            ],
            "subnets": [
              "subnet-04865bd86497276d6",
              "subnet-0b65d5b4383da95c1",
              "subnet-0e3ffc0b3a7408684"
            ],
            "vpc_id": "vpc-0759d5a7d216160d3",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.consul_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.consul_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.fabio_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_client_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "fabio_lb",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/net/terraform-545j4bommr8kop-fabio/6a1395762308b970",
            "arn_suffix": "net/terraform-545j4bommr8kop-fabio/6a1395762308b970",
            "dns_name": "terraform-545j4bommr8kop-fabio-6a1395762308b970.elb.eu-west-3.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/net/terraform-545j4bommr8kop-fabio/6a1395762308b970",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "terraform-545j4bommr8kop-fabio",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04865bd86497276d6"
              },
              {
                "subnet_id": "subnet-0b65d5b4383da95c1"
              },
              {
                "subnet_id": "subnet-0e3ffc0b3a7408684"
              }
            ],
            "subnets": [
              "subnet-04865bd86497276d6",
              "subnet-0b65d5b4383da95c1",
              "subnet-0e3ffc0b3a7408684"
            ],
            "vpc_id": "vpc-0759d5a7d216160d3",
            "zone_id": "Z1CMS0P5QUZ6D5"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nomad_lb",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/app/terraform-545j4bommr8kop-nomad/12c72ad2f8cfd359",
            "arn_suffix": "app/terraform-545j4bommr8kop-nomad/12c72ad2f8cfd359",
            "dns_name": "terraform-545j4bommr8kop-nomad-1743236414.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/app/terraform-545j4bommr8kop-nomad/12c72ad2f8cfd359",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-545j4bommr8kop-nomad",
            "security_groups": [
              "sg-0f2bd3f40b1471d5b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04865bd86497276d6"
              },
              {
                "subnet_id": "subnet-0b65d5b4383da95c1"
              },
              {
                "subnet_id": "subnet-0e3ffc0b3a7408684"
              }
            ],
            "subnets": [
              "subnet-04865bd86497276d6",
              "subnet-0b65d5b4383da95c1",
              "subnet-0e3ffc0b3a7408684"
            ],
            "vpc_id": "vpc-0759d5a7d216160d3",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.consul_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.consul_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.fabio_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_client_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "vault_lb",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/app/terraform-545j4bommr8kop-vault/b80b55c3e409308a",
            "arn_suffix": "app/terraform-545j4bommr8kop-vault/b80b55c3e409308a",
            "dns_name": "terraform-545j4bommr8kop-vault-1077930290.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/app/terraform-545j4bommr8kop-vault/b80b55c3e409308a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-545j4bommr8kop-vault",
            "security_groups": [
              "sg-05ca6196cb96127f3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04865bd86497276d6"
              },
              {
                "subnet_id": "subnet-0b65d5b4383da95c1"
              },
              {
                "subnet_id": "subnet-0e3ffc0b3a7408684"
              }
            ],
            "subnets": [
              "subnet-04865bd86497276d6",
              "subnet-0b65d5b4383da95c1",
              "subnet-0e3ffc0b3a7408684"
            ],
            "vpc_id": "vpc-0759d5a7d216160d3",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.consul_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.consul_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.fabio_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_client_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "consul_ui",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:listener/app/terraform-545j4bommr8kop-consul/4e7e710929c25546/d3618dad2f037e43",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-consul-ui/1f33a1491aaa2e1a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:listener/app/terraform-545j4bommr8kop-consul/4e7e710929c25546/d3618dad2f037e43",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/app/terraform-545j4bommr8kop-consul/4e7e710929c25546",
            "port": 8500,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.eu-west-3.module.loadbalancing.aws_lb.consul_lb",
            "module.eu-west-3.module.loadbalancing.aws_lb_target_group.consul_ui",
            "module.eu-west-3.module.loadbalancing.random_string.rand",
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.consul_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.consul_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.fabio_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_client_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "fabio_lb",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:listener/net/terraform-545j4bommr8kop-fabio/6a1395762308b970/5a0e14121b2ef3db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-fabio-lb/b9e94bb1eb1df8ae",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:listener/net/terraform-545j4bommr8kop-fabio/6a1395762308b970/5a0e14121b2ef3db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/net/terraform-545j4bommr8kop-fabio/6a1395762308b970",
            "port": 9999,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.eu-west-3.module.loadbalancing.aws_lb.fabio_lb",
            "module.eu-west-3.module.loadbalancing.aws_lb_target_group.fabio_lb",
            "module.eu-west-3.module.loadbalancing.random_string.rand",
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "fabio_ui",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:listener/net/terraform-545j4bommr8kop-fabio/6a1395762308b970/40f7b7344bcc4ee4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-fabio-ui/83d1a85b70f7019a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:listener/net/terraform-545j4bommr8kop-fabio/6a1395762308b970/40f7b7344bcc4ee4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/net/terraform-545j4bommr8kop-fabio/6a1395762308b970",
            "port": 9998,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.eu-west-3.module.loadbalancing.aws_lb.fabio_lb",
            "module.eu-west-3.module.loadbalancing.aws_lb_target_group.fabio_ui",
            "module.eu-west-3.module.loadbalancing.random_string.rand",
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nomad_ui",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:listener/app/terraform-545j4bommr8kop-nomad/12c72ad2f8cfd359/04ff653f36582087",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-nomad-ui/f92d22e336419cce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:listener/app/terraform-545j4bommr8kop-nomad/12c72ad2f8cfd359/04ff653f36582087",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/app/terraform-545j4bommr8kop-nomad/12c72ad2f8cfd359",
            "port": 4646,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.eu-west-3.module.loadbalancing.aws_lb.nomad_lb",
            "module.eu-west-3.module.loadbalancing.aws_lb_target_group.nomad_ui",
            "module.eu-west-3.module.loadbalancing.random_string.rand",
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.consul_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.consul_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.fabio_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_client_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vault_api",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:listener/app/terraform-545j4bommr8kop-vault/b80b55c3e409308a/2b903b3bf9bb9695",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-vault-api/6af7f7ba426c4432",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:listener/app/terraform-545j4bommr8kop-vault/b80b55c3e409308a/2b903b3bf9bb9695",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:loadbalancer/app/terraform-545j4bommr8kop-vault/b80b55c3e409308a",
            "port": 8200,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.eu-west-3.module.loadbalancing.aws_lb.vault_lb",
            "module.eu-west-3.module.loadbalancing.aws_lb_target_group.vault_api",
            "module.eu-west-3.module.loadbalancing.random_string.rand",
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.consul_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.consul_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.fabio_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_client_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.nomad_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_lb_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vault_server_sg.aws_security_group.security_group",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "consul_ui",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-consul-ui/1f33a1491aaa2e1a",
            "arn_suffix": "targetgroup/uwfnerl9-consul-ui/1f33a1491aaa2e1a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/status/leader",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-consul-ui/1f33a1491aaa2e1a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "uwfnerl9-consul-ui",
            "port": 8500,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.loadbalancing.random_string.rand",
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fabio_lb",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-fabio-lb/b9e94bb1eb1df8ae",
            "arn_suffix": "targetgroup/uwfnerl9-fabio-lb/b9e94bb1eb1df8ae",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "4646",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-fabio-lb/b9e94bb1eb1df8ae",
            "lambda_multi_value_headers_enabled": false,
            "name": "uwfnerl9-fabio-lb",
            "port": 9999,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.loadbalancing.random_string.rand",
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fabio_ui",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-fabio-ui/83d1a85b70f7019a",
            "arn_suffix": "targetgroup/uwfnerl9-fabio-ui/83d1a85b70f7019a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "4646",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-fabio-ui/83d1a85b70f7019a",
            "lambda_multi_value_headers_enabled": false,
            "name": "uwfnerl9-fabio-ui",
            "port": 9998,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.loadbalancing.random_string.rand",
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nomad_ui",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-nomad-ui/f92d22e336419cce",
            "arn_suffix": "targetgroup/uwfnerl9-nomad-ui/f92d22e336419cce",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-404",
                "path": "/v1/agent/self",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-nomad-ui/f92d22e336419cce",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "uwfnerl9-nomad-ui",
            "port": 4646,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.loadbalancing.random_string.rand",
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vault_api",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-vault-api/6af7f7ba426c4432",
            "arn_suffix": "targetgroup/uwfnerl9-vault-api/6af7f7ba426c4432",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,429,472",
                "path": "/v1/sys/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:837089879979:targetgroup/uwfnerl9-vault-api/6af7f7ba426c4432",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "uwfnerl9-vault-api",
            "port": 8200,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.loadbalancing.random_string.rand",
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.eu-west-3.module.networking.module.vpc.aws_customer_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_db_subnet_group.database",
            "module.eu-west-3.module.networking.module.vpc.aws_default_network_acl.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_security_group.this",
            "module.eu-west-3.module.networking.module.vpc.aws_default_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_egress_only_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_flow_log.this",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.database",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.private",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.public",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.database_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.private_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.public_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.eu-west-3.module.networking.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.eu-west-3.module.networking.module.vpc.aws_redshift_subnet_group.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.database_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_ipv6_egress",
            "module.eu-west-3.module.networking.module.vpc.aws_route.private_nat_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway",
            "module.eu-west-3.module.networking.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.database",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.private",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.public",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table_association.redshift_public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.database",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.elasticache",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.redshift",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.apigw",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.athena",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codebuild",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.config",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.datasync",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ebs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.efs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.emr",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.events",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.glue",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.kms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.lambda",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.logs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.monitoring",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rds",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.rekognition",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ses",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sms",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sns",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sqs",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssm",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.states",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.sts",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.textract",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transfer",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.transferserver",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint.workspaces",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_attachment.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.eu-west-3.module.networking.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.eu-west-3.module.networking.module.vpc.data.aws_vpc_endpoint_service.workspaces",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.consul_lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:security-group/sg-05926d81beb80780d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05926d81beb80780d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Consul LB SG",
            "name_prefix": "",
            "owner_id": "837089879979",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.consul_server_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:security-group/sg-05a81cc0a384b87df",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a81cc0a384b87df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8301
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8302,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8302
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Consul server SG",
            "name_prefix": "",
            "owner_id": "837089879979",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.fabio_lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:security-group/sg-0e13d7bc23051d43d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e13d7bc23051d43d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9998,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9998
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9999,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Fabio LB SG",
            "name_prefix": "",
            "owner_id": "837089879979",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.nomad_client_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:security-group/sg-0f579ce457e87904a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f579ce457e87904a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4647,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4647
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4648,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4648
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6688,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6688
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8301
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8546,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8546
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9998,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9998
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9999,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Nomad client SG",
            "name_prefix": "",
            "owner_id": "837089879979",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.nomad_lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:security-group/sg-0f2bd3f40b1471d5b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2bd3f40b1471d5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Nomad LB SG",
            "name_prefix": "",
            "owner_id": "837089879979",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.nomad_server_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:security-group/sg-03cd942d444c0d67c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cd942d444c0d67c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4647,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4647
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4648,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4648
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8301
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Nomad server SG",
            "name_prefix": "",
            "owner_id": "837089879979",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vault_lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:security-group/sg-05ca6196cb96127f3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ca6196cb96127f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Vault LB SG",
            "name_prefix": "",
            "owner_id": "837089879979",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vault_server_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:security-group/sg-0c9b76e789190e8ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9b76e789190e8ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8201
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8301
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Vault server SG",
            "name_prefix": "",
            "owner_id": "837089879979",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d07620c2965a19ba",
            "domain": "vpc",
            "id": "eipalloc-00dcc4216e86429fe",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-01efb344265c1c4f9",
            "private_dns": "ip-10-0-101-158.eu-west-3.compute.internal",
            "private_ip": "10.0.101.158",
            "public_dns": "ec2-35-181-117-91.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.117.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc-eu-west-3a",
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:internet-gateway/igw-0e22552758f7ef3f4",
            "id": "igw-0e22552758f7ef3f4",
            "owner_id": "837089879979",
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc",
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dcc4216e86429fe",
            "id": "nat-03cd158319adacb8c",
            "network_interface_id": "eni-01efb344265c1c4f9",
            "private_ip": "10.0.101.158",
            "public_ip": "35.181.117.91",
            "subnet_id": "subnet-0e3ffc0b3a7408684",
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc-eu-west-3a",
              "ResourceGroup": "terraform-545j4bommr8kop"
            }
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-063d8803634b1e49b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03cd158319adacb8c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-063d8803634b1e49b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_eip.nat",
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_nat_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e22552758f7ef3f4",
            "id": "r-rtb-0622b36e24d22b1191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0622b36e24d22b119",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_internet_gateway.this",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-063d8803634b1e49b",
            "owner_id": "837089879979",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03cd158319adacb8c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc-private",
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0622b36e24d22b119",
            "owner_id": "837089879979",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e22552758f7ef3f4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc-public",
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a90ff0cfd425f0e",
            "route_table_id": "rtb-063d8803634b1e49b",
            "subnet_id": "subnet-03a5b3c15b123b46c"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0788677007aa1e269",
            "route_table_id": "rtb-063d8803634b1e49b",
            "subnet_id": "subnet-0ebd575d317c79fa3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0275917aa7555fa69",
            "route_table_id": "rtb-063d8803634b1e49b",
            "subnet_id": "subnet-0f607a86fc62b378f"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.private",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.private",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7ef8b82ffcb7650",
            "route_table_id": "rtb-0622b36e24d22b119",
            "subnet_id": "subnet-0e3ffc0b3a7408684"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0125e467d24b052e8",
            "route_table_id": "rtb-0622b36e24d22b119",
            "subnet_id": "subnet-04865bd86497276d6"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b78d653468b94151",
            "route_table_id": "rtb-0622b36e24d22b119",
            "subnet_id": "subnet-0b65d5b4383da95c1"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_route_table.public",
            "module.eu-west-3.module.networking.module.vpc.aws_subnet.public",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:subnet/subnet-03a5b3c15b123b46c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03a5b3c15b123b46c",
            "map_public_ip_on_launch": false,
            "owner_id": "837089879979",
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc-private-eu-west-3a",
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:subnet/subnet-0ebd575d317c79fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ebd575d317c79fa3",
            "map_public_ip_on_launch": false,
            "owner_id": "837089879979",
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc-private-eu-west-3b",
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:subnet/subnet-0f607a86fc62b378f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f607a86fc62b378f",
            "map_public_ip_on_launch": false,
            "owner_id": "837089879979",
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc-private-eu-west-3c",
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:subnet/subnet-0e3ffc0b3a7408684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0e3ffc0b3a7408684",
            "map_public_ip_on_launch": true,
            "owner_id": "837089879979",
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc-public-eu-west-3a",
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:subnet/subnet-04865bd86497276d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-04865bd86497276d6",
            "map_public_ip_on_launch": true,
            "owner_id": "837089879979",
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc-public-eu-west-3b",
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:subnet/subnet-0b65d5b4383da95c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0b65d5b4383da95c1",
            "map_public_ip_on_launch": true,
            "owner_id": "837089879979",
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc-public-eu-west-3c",
              "ResourceGroup": "terraform-545j4bommr8kop"
            },
            "vpc_id": "vpc-0759d5a7d216160d3"
          },
          "dependencies": [
            "module.eu-west-3.module.networking.data.aws_availability_zones.available",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc.this",
            "module.eu-west-3.module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    },
    {
      "module": "module.eu-west-3.module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.eu-west-3.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:837089879979:vpc/vpc-0759d5a7d216160d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098a3e5822b1916dc",
            "default_route_table_id": "rtb-01546e52373d2e74a",
            "default_security_group_id": "sg-0fdf474faa1894a7e",
            "dhcp_options_id": "dopt-350d105c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0759d5a7d216160d3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01546e52373d2e74a",
            "owner_id": "837089879979",
            "tags": {
              "Name": "terraform-545j4bommr8kop-vpc",
              "ResourceGroup": "terraform-545j4bommr8kop"
            }
          },
          "dependencies": [
            "module.eu-west-3.module.resourcegroup.random_string.rand"
          ]
        }
      ]
    }
  ]
}